# githubtest-rust

./: Cargo.toml  README.md
src/: lib.rs  request_types.rs  schemas.rs
