[package]
name = "hacker_news_api"
version = "1.0.0"
edition = "2021"
description = "Rust API bindings - shacker_news_api"
license = "MIT"

[lib]
crate-type = ["lib"]
name = "hacker_news_api"

[dependencies]
serde_json = "1.0.97"
reqwest = { version = "0.11.18", features = ["blocking", "json", "multipart"] }
serde = { version = "1.0.183", features = ["derive"] }
thiserror = "1.0.43"
base64 = "0.21.2"
